[package]
name = "photo-takeout-sorter"
description = "Tool for sorting the media files you received from Google Takeout for Photos"
version = "0.1.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[dependencies]
chrono = "*"
clap = {version = "*", features = ["yaml"]}
fern = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
